# vvtec-solana-projects

./: .env.example  Cargo.toml  README.md  deploy.sh
.github/workflows/: build-test.yml
cli/: Cargo.toml  README.md
cli/src/: config.rs  create.rs  delete.rs  main.rs  read.rs  update.rs
client/: Cargo.toml
client/src/: lib.rs
contract/: Anchor.toml  vvtec-keypair.json
contract-native/: Cargo.toml
contract-native/src/: lib.rs  processor.rs
contract-native/src/processors/: create.rs  delete.rs  update.rs
contract/programs/vvtec-onchain/: Cargo.toml
contract/programs/vvtec-onchain/src/: lib.rs  state.rs
contract/tests/: vvtec-onchain.ts
core/: Cargo.toml
core/src/: error.rs  lib.rs  state.rs
docs/: README.md
evm/: .env.example  .gitignore  README.md  hardhat.config.js  package.json  tronbox.js
evm/contracts/: VvtecClient.sol  VvtecFacade.sol  VvtecOracle.sol
evm/contracts/mock/: BizMock.sol  ERC20Mock.sol
evm/contracts/tron/: Migrations.sol
evm/migrations/: 1_initial_migration.js  2_deploy_factory.js
evm/scripts/: deploy-factory.js
evm/tasks/: account.js  create.js  delete.js  read.js  update.js
evm/test/: TronVvtecINfo.test.js  VVTECFacade.test.js  VVTECFlow.test.js
examples/: .editorconfig  .env.example  package.json  tsconfig.json
examples/src/components/: Layout.tsx  Navbar.tsx
examples/src/pages/: _app.tsx  _document.tsx  index.tsx  near.tsx  solana.tsx
examples/src/utils/: contracts.ts  supportedChains.ts
js-sdk/: package.json
js-sdk/src/: consts.ts  index.ts
js-sdk/src/helpers/: index.ts  near.ts  solana.ts  web3.ts
js-sdk/src/oracles/: index.ts
js-sdk/src/types/: vvtec_onchain.ts
js-sdk/tests/: index.spec.ts
rs-sdk/: Cargo.toml
rs-sdk/src/: lib.rs
rs-sdk/src/near/: mod.rs
rs-sdk/src/solana/: mod.rs
vvtec-near/: Cargo.toml  README.md
vvtec-near/scripts/: test.sh
vvtec-near/src/: lib.rs
vvtec-near/tests/: basic.rs
