[package]
name = "vvtec-cli"
version = "0.1.1"
edition = "2018"
description = "VVTEC Oracles Rust SDK for Solana"
authors = ["Vvtec Network Developers <hello@vvtec.network>"]
license = "Apache-2.0"

[dependencies]
vvtec-core = { path = "../core" }
vvtec-client = { path = "../client" }
chrono = "0.4.19"
borsh = "0.9.3"
anyhow = "1.0.57"
structopt = "0.3.26"
clap = "3.1.18"
console = "0.15.0"
dialoguer = "0.10.1"
indicatif = "0.16.2"
humantime = "2.1"
solana-sdk = "1.10.27"
solana-client = "1.10.27"
solana-cli-config = "1.10.27"
ctrlc = { version = "3.2.2", features = ["termination"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
reqwest = { version = "0.11.10", default-features = false, features = [
  "blocking",
  "rustls-tls",
  "json",
] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio = { version = "1.14.1", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.57"
assert_cmd = "2.0.4"

[[bin]]
name = "vvtec"
path = "src/main.rs"
