[package]
name = "vvtec-core"
version = "0.1.1"
edition = "2021"
description = "VVTEC Oracles contracts"
authors = ["VVTEC Network Developers <hello@vvtec.network>"]

[dependencies]
anchor-lang = "0.25.0"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[lib]
name = "vvtec"
crate-type = ["cdylib", "lib"]
