[package]
name = "vvtec-near"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
serde = "*"

[dev-dependencies]
anyhow = "1.0.58"
near-units = "0.2.0"
serde_json = "1.0.82"
tokio = "^1"
workspaces = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
